<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent">

	<LinearLayout android:orientation="horizontal"
		android:layout_width="fill_parent" android:layout_height="wrap_content">

		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/name" />
		<EditText android:id="@+id/title" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:layout_weight="1" />

	</LinearLayout>
	
	<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:id="@+id/TextViewSex"
			android:text="@string/sex"></TextView>

	<LinearLayout android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:orientation="horizontal"
		android:id="@+id/LinearLayoutMasc">
		<CheckBox android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:id="@+id/CheckBoxMasc" android:checked="true"></CheckBox>
		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:id="@+id/TextViewMasc"
			android:scrollHorizontally="true" android:text="@string/masc"></TextView>

	</LinearLayout>
	<LinearLayout android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:orientation="horizontal"
		android:id="@+id/LinearLayoutFem">
		<CheckBox android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:id="@+id/CheckBoxFem"
			android:checked="false"></CheckBox>
		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:scrollHorizontally="true"
			android:id="@+id/TextViewFem" android:text="@string/fem"></TextView>

	</LinearLayout>

	<TextView android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:id="@+id/TextViewPas"
		android:text="@string/pas"></TextView>
	<LinearLayout android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:orientation="horizontal"
		android:id="@+id/LinearLayoutCine">
		<CheckBox android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:id="@+id/Cine"
			android:checked="false"></CheckBox>
		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:id="@+id/TextViewCine"
			android:scrollHorizontally="true" android:text="@string/cine"></TextView>

	</LinearLayout>


	<LinearLayout android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:orientation="horizontal"
		android:id="@+id/LinearLayoutTel">
		<CheckBox android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:id="@+id/Television"
			android:checked="false"></CheckBox>
		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:id="@+id/TextViewTel"
			android:scrollHorizontally="true" android:text="@string/tel"></TextView>

	</LinearLayout>
	<LinearLayout android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:orientation="horizontal"
		android:id="@+id/LinearLayoutDep">
		<CheckBox android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:id="@+id/Deporte"
			android:checked="false"></CheckBox>
		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:id="@+id/TextViewDep"
			android:scrollHorizontally="true" android:text="@string/dep"></TextView>

	</LinearLayout>
	<LinearLayout android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:orientation="horizontal"
		android:id="@+id/LinearLayoutAmis">
		<CheckBox android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:id="@+id/Amistad"
			android:checked="false"></CheckBox>
		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:id="@+id/TextViewAmis"
			android:scrollHorizontally="true" android:text="@string/amis"></TextView>

	</LinearLayout>
	<Button android:id="@+id/confirm" android:text="@string/confirm"
		android:layout_width="fill_parent" android:layout_height="fill_parent" />


</LinearLayout>